class_file/snapshots/jdk-jdk-internal-util-DecimalDigits.class.snap
---
source: class_file/src/lib.rs
expression: display
---
public final class jdk.internal.util.DecimalDigits 
  minor version: 0
  major version: 68
  flags: (0x0031) ACC_PUBLIC, ACC_FINAL, ACC_SUPER
  this_class: #8                       //jdk/internal/util/DecimalDigits
  super_class: #2                      //java/lang/Object
  interfaces: 0, fields: 1, methods: 5, attributes: 1
Constant pool:
   #1 = Methodref          #2.#3            // java/lang/Object."<init>":()V
   #2 = Class              #4               // java/lang/Object
   #3 = NameAndType        #5:#6            // "<init>":()V
   #4 = Utf8               java/lang/Object
   #5 = Utf8               <init>
   #6 = Utf8               ()V
   #7 = Fieldref           #8.#9            // jdk/internal/util/DecimalDigits.DIGITS:[S
   #8 = Class              #10              // jdk/internal/util/DecimalDigits
   #9 = NameAndType        #11:#12          // DIGITS:[S
  #10 = Utf8               jdk/internal/util/DecimalDigits
  #11 = Utf8               DIGITS
  #12 = Utf8               [S
  #13 = Long               -10l
  #15 = Long               10l
  #17 = Utf8               RuntimeVisibleAnnotations
  #18 = Utf8               Ljdk/internal/vm/annotation/Stable;
  #19 = Utf8               Code
  #20 = Utf8               LineNumberTable
  #21 = Utf8               LocalVariableTable
  #22 = Utf8               this
  #23 = Utf8               Ljdk/internal/util/DecimalDigits;
  #24 = Utf8               digitPair
  #25 = Utf8               (I)S
  #26 = Utf8               i
  #27 = Utf8               I
  #28 = Utf8               stringSize
  #29 = Utf8               (I)I
  #30 = Utf8               x
  #31 = Utf8               d
  #32 = Utf8               p
  #33 = Utf8               StackMapTable
  #34 = Utf8               (J)I
  #35 = Utf8               J
  #36 = Utf8               <clinit>
  #37 = Utf8               lo
  #38 = Utf8               S
  #39 = Utf8               j
  #40 = Utf8               hi
  #41 = Utf8               digits
  #42 = Class              #12              // "[S"
  #43 = Utf8               SourceFile
  #44 = Utf8               DecimalDigits.java
{
  private static final short[] DIGITS;
    descriptor: [S
    flags: (0x001a) ACC_PRIVATE, ACC_STATIC, ACC_FINAL
    RuntimeVisibleAnnotations:
      0: #18()
        jdk.internal.vm.annotation.Stable
  
  private jdk.internal.util.DecimalDigits();
    descriptor: ()V
    flags: (0x0002) ACC_PRIVATE
    Code: 
      stack=1, locals=1, args_size=1
         0: aload_0                 
         1: invokespecial #1                  // Method java/lang/Object."<init>":()V
         4: return                  
      LineNumberTable:
        line 76: 0
        line 77: 4
      LocalVariableTable:
       Start   Length  Slot  Name   Signature
           0        5     0  this   Ljdk/internal/util/DecimalDigits;
  
  public static short digitPair(int);
    descriptor: (I)S
    flags: (0x0009) ACC_PUBLIC, ACC_STATIC
    Code: 
      stack=2, locals=1, args_size=1
         0: getstatic     #7                  // Field DIGITS:[S
         3: iload_0                 
         4: saload                  
         5: ireturn                 
      LineNumberTable:
        line 85: 0
      LocalVariableTable:
       Start   Length  Slot  Name   Signature
           0        6     0  i      I
  
  public static int stringSize(int);
    descriptor: (I)I
    flags: (0x0009) ACC_PUBLIC, ACC_STATIC
    Code: 
      stack=2, locals=4, args_size=1
         0: iconst_1                
         1: istore_1                
         2: iload_0                 
         3: iflt          11                
         6: iconst_0                
         7: istore_1                
         8: iload_0                 
         9: ineg                    
        10: istore_0                
        11: bipush        -10               
        13: istore_2                
        14: iconst_1                
        15: istore_3                
        16: iload_3                 
        17: bipush        10                
        19: if_icmpge     42                
        22: iload_0                 
        23: iload_2                 
        24: if_icmple     31                
        27: iload_3                 
        28: iload_1                 
        29: iadd                    
        30: ireturn                 
        31: bipush        10                
        33: iload_2                 
        34: imul                    
        35: istore_2                
        36: iinc          3, 1              
        39: goto          16                
        42: bipush        10                
        44: iload_1                 
        45: iadd                    
        46: ireturn                 
      LineNumberTable:
        line 100: 0
        line 101: 2
        line 102: 6
        line 103: 8
        line 105: 11
        line 106: 14
        line 107: 22
        line 108: 27
        line 109: 31
        line 106: 36
        line 111: 42
      LocalVariableTable:
       Start   Length  Slot  Name   Signature
          16       26     3  i      I
           0       47     0  x      I
           2       45     1  d      I
          14       33     2  p      I
      StackMapTable: number_of_entries = 4
        frame_type = 252 /* append */
          offset_delta = 11
          locals = [int]
        frame_type = 253 /* append */
          offset_delta = 4
          locals = [int, int]
        frame_type = 14 /* same */
        frame_type = 250 /* chop */
          offset_delta = 10
  
  public static int stringSize(long);
    descriptor: (J)I
    flags: (0x0009) ACC_PUBLIC, ACC_STATIC
    Code: 
      stack=4, locals=6, args_size=1
         0: iconst_1                
         1: istore_2                
         2: lload_0                 
         3: lconst_0                
         4: lcmp                    
         5: iflt          13                
         8: iconst_0                
         9: istore_2                
        10: lload_0                 
        11: lneg                    
        12: lstore_0                
        13: ldc2_w        #13                 // long -10l
        16: lstore_3                
        17: iconst_1                
        18: istore        5                 
        20: iload         5                 
        22: bipush        19                
        24: if_icmpge     50                
        27: lload_0                 
        28: lload_3                 
        29: lcmp                    
        30: ifle          38                
        33: iload         5                 
        35: iload_2                 
        36: iadd                    
        37: ireturn                 
        38: ldc2_w        #15                 // long 10l
        41: lload_3                 
        42: lmul                    
        43: lstore_3                
        44: iinc          5, 1              
        47: goto          20                
        50: bipush        19                
        52: iload_2                 
        53: iadd                    
        54: ireturn                 
      LineNumberTable:
        line 126: 0
        line 127: 2
        line 128: 8
        line 129: 10
        line 131: 13
        line 132: 17
        line 133: 27
        line 134: 33
        line 135: 38
        line 132: 44
        line 137: 50
      LocalVariableTable:
       Start   Length  Slot  Name   Signature
          20       30     5  i      I
           0       55     0  x      J
           2       53     2  d      I
          17       38     3  p      J
      StackMapTable: number_of_entries = 4
        frame_type = 252 /* append */
          offset_delta = 13
          locals = [int]
        frame_type = 253 /* append */
          offset_delta = 6
          locals = [long, int]
        frame_type = 17 /* same */
        frame_type = 250 /* chop */
          offset_delta = 11
  
  static {};
    descriptor: ()V
    flags: (0x0008) ACC_STATIC
    Code: 
      stack=4, locals=5, args_size=0
         0: bipush        100               
         2: newarray      short             
         4: astore_0                
         5: iconst_0                
         6: istore_1                
         7: iload_1                 
         8: bipush        10                
        10: if_icmpge     62                
        13: iload_1                 
        14: bipush        48                
        16: iadd                    
        17: i2s                     
        18: istore_2                
        19: iconst_0                
        20: istore_3                
        21: iload_3                 
        22: bipush        10                
        24: if_icmpge     56                
        27: iload_3                 
        28: bipush        48                
        30: iadd                    
        31: bipush        8                 
        33: ishl                    
        34: i2s                     
        35: istore        4                 
        37: aload_0                 
        38: iload_1                 
        39: bipush        10                
        41: imul                    
        42: iload_3                 
        43: iadd                    
        44: iload_2                 
        45: iload         4                 
        47: ior                     
        48: i2s                     
        49: sastore                 
        50: iinc          3, 1              
        53: goto          21                
        56: iinc          1, 1              
        59: goto          7                 
        62: aload_0                 
        63: putstatic     #7                  // Field DIGITS:[S
        66: return                  
      LineNumberTable:
        line 61: 0
        line 63: 5
        line 64: 13
        line 65: 19
        line 66: 27
        line 67: 37
        line 65: 50
        line 63: 56
        line 70: 62
        line 71: 66
      LocalVariableTable:
       Start   Length  Slot  Name   Signature
          37       13     4  lo     S
          21       35     3  j      I
          19       37     2  hi     S
           7       55     1  i      I
           5       61     0  digits [S
      StackMapTable: number_of_entries = 4
        frame_type = 253 /* append */
          offset_delta = 7
          locals = [class "[S", int]
        frame_type = 253 /* append */
          offset_delta = 13
          locals = [int, int]
        frame_type = 249 /* chop */
          offset_delta = 34
        frame_type = 250 /* chop */
          offset_delta = 5
}
SourceFile: "DecimalDigits.java"
