class_file/snapshots/jdk-jdk-internal-util-Preconditions$2.class.snap
---
source: class_file/src/lib.rs
expression: display
---
class jdk.internal.util.Preconditions$2 extends java.lang.Object implements java.util.function.Function<java.lang.String, java.lang.ArrayIndexOutOfBoundsException>
  minor version: 0
  major version: 68
  flags: (0x0020) ACC_SUPER
  this_class: #15                      //jdk/internal/util/Preconditions$2
  super_class: #2                      //java/lang/Object
  interfaces: 1, fields: 0, methods: 3, attributes: 5
Constant pool:
   #1 = Methodref          #2.#3            // java/lang/Object."<init>":()V
   #2 = Class              #4               // java/lang/Object
   #3 = NameAndType        #5:#6            // "<init>":()V
   #4 = Utf8               java/lang/Object
   #5 = Utf8               <init>
   #6 = Utf8               ()V
   #7 = Class              #8               // java/lang/ArrayIndexOutOfBoundsException
   #8 = Utf8               java/lang/ArrayIndexOutOfBoundsException
   #9 = Methodref          #7.#10           // java/lang/ArrayIndexOutOfBoundsException."<init>":(Ljava/lang/String;)V
  #10 = NameAndType        #5:#11           // "<init>":(Ljava/lang/String;)V
  #11 = Utf8               (Ljava/lang/String;)V
  #12 = Class              #13              // java/lang/String
  #13 = Utf8               java/lang/String
  #14 = Methodref          #15.#16          // jdk/internal/util/Preconditions$2.apply:(Ljava/lang/String;)Ljava/lang/ArrayIndexOutOfBoundsException;
  #15 = Class              #17              // jdk/internal/util/Preconditions$2
  #16 = NameAndType        #18:#19          // apply:(Ljava/lang/String;)Ljava/lang/ArrayIndexOutOfBoundsException;
  #17 = Utf8               jdk/internal/util/Preconditions$2
  #18 = Utf8               apply
  #19 = Utf8               (Ljava/lang/String;)Ljava/lang/ArrayIndexOutOfBoundsException;
  #20 = Class              #21              // java/util/function/Function
  #21 = Utf8               java/util/function/Function
  #22 = Utf8               Code
  #23 = Utf8               LineNumberTable
  #24 = Utf8               LocalVariableTable
  #25 = Utf8               this
  #26 = Utf8               Ljdk/internal/util/Preconditions$2;
  #27 = Utf8               s
  #28 = Utf8               Ljava/lang/String;
  #29 = Utf8               (Ljava/lang/Object;)Ljava/lang/Object;
  #30 = Utf8               MethodParameters
  #31 = Utf8               Signature
  #32 = Utf8               Ljava/lang/Object;Ljava/util/function/Function<Ljava/lang/String;Ljava/lang/ArrayIndexOutOfBoundsException;>;
  #33 = Utf8               SourceFile
  #34 = Utf8               Preconditions.java
  #35 = Utf8               EnclosingMethod
  #36 = Class              #37              // jdk/internal/util/Preconditions
  #37 = Utf8               jdk/internal/util/Preconditions
  #38 = Utf8               NestHost
  #39 = Utf8               InnerClasses
{
  jdk.internal.util.Preconditions$2();
    descriptor: ()V
    flags: (0x0000) 
    Code: 
      stack=1, locals=1, args_size=1
         0: aload_0                 
         1: invokespecial #1                  // Method java/lang/Object."<init>":()V
         4: return                  
      LineNumberTable:
        line 60: 0
      LocalVariableTable:
       Start   Length  Slot  Name   Signature
           0        5     0  this   Ljdk/internal/util/Preconditions$2;
  
  public java.lang.ArrayIndexOutOfBoundsException apply(java.lang.String);
    descriptor: (Ljava/lang/String;)Ljava/lang/ArrayIndexOutOfBoundsException;
    flags: (0x0001) ACC_PUBLIC
    Code: 
      stack=3, locals=2, args_size=2
         0: new           #7                  // class java/lang/ArrayIndexOutOfBoundsException
         3: dup                     
         4: aload_1                 
         5: invokespecial #9                  // Method java/lang/ArrayIndexOutOfBoundsException."<init>":(Ljava/lang/String;)V
         8: areturn                 
      LineNumberTable:
        line 63: 0
      LocalVariableTable:
       Start   Length  Slot  Name   Signature
           0        9     0  this   Ljdk/internal/util/Preconditions$2;
           0        9     1  s      Ljava/lang/String;
  
  public java.lang.Object apply(java.lang.Object);
    descriptor: (Ljava/lang/Object;)Ljava/lang/Object;
    flags: (0x1041) ACC_PUBLIC, ACC_BRIDGE, ACC_SYNTHETIC
    Code: 
      stack=2, locals=2, args_size=2
         0: aload_0                 
         1: aload_1                 
         2: checkcast     #12                 // class java/lang/String
         5: invokevirtual #14                 // Method apply:(Ljava/lang/String;)Ljava/lang/ArrayIndexOutOfBoundsException;
         8: areturn                 
      LineNumberTable:
        line 60: 0
      LocalVariableTable:
       Start   Length  Slot  Name   Signature
           0        9     0  this   Ljdk/internal/util/Preconditions$2;
    MethodParameters:
      Name                             Flags
      <no name>                        synthetic 
}
Signature: #32                         // Ljava/lang/Object;Ljava/util/function/Function<Ljava/lang/String;Ljava/lang/ArrayIndexOutOfBoundsException;>;
SourceFile: "Preconditions.java"
EnclosingMethod: #36.#0  // jdk.internal.util.Preconditions
NestHost: class jdk/internal/util/Preconditions
InnerClasses:
  #15;                                        // class jdk/internal/util/Preconditions$2
